# rusty-psx

./: .gitignore  Cargo.toml
src/: instructions_decoder.rs  instructions_table.rs  main.rs  memory.rs
src/cpu/: mod.rs
