[package]
name = "rusty_psx"
version = "0.1.0"
authors = ["rainbowcookie32"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
sdl2 = "0.32.2"
imgui = "0.2.1"
imgui-sdl2 = "0.7.0"
imgui-opengl-renderer = "0.6.0"

byteorder = "1.3.2"